--- a/src/static/scss/base.scss
+++ b/src/static/scss/base.scss
@@ -61,6 +61,7 @@ pre code{
     line-height: 1;
     font-size: 24px;
     padding-left: 16px;
+    margin-bottom: 14px;
     position: relative;
     
     &::after {
@@ -88,6 +89,7 @@ pre code{
 
   p {
     margin: 10px 0;
+    color: #526069;
   }
 
   h4 {
