--- a/src/static/scss/base.scss
+++ b/src/static/scss/base.scss
@@ -101,3 +101,22 @@ pre code{
 .highlighted {
   color: $color-min;
 }
+
+// 列表
+.function-list{
+  padding-left: 25px;
+
+  li{
+    list-style: disc;
+    margin: 5px 0;
+
+    span{
+      font-size: 14px;
+      background: #f5f5f5;
+      border: 1px solid #e4eaec;
+      display: inline-block;
+      padding: 2px 8px;
+      color: #526069
+    }
+  }
+}
